# niv

./: .gitignore  CHANGELOG.md  HACKING.md  LICENSE  Main.hs  README.md  README.tpl.md  default.nix  flake.nix  niv.cabal  package.yaml  shell.nix
.circleci/: config.yml
.github/actions/nix/: action.yml  install-nix
.github/workflows/: netlify.yml  test.yml
app/: Niv.hs  NivTest.hs  test.hs
data/: README.md  nixpkgs.json
examples/cpp/: CMakeLists.txt  default.nix  overlay.nix
examples/cpp-libosmium/: default.nix  overlay.nix
examples/cpp-libosmium/cmake/Modules/: FindOsmium.cmake
examples/cpp-libosmium/nix/: sources.json  sources.nix
examples/cpp-libosmium/overlay/: libosmium.nix
examples/cpp-libosmium/src/: CMakeLists.txt  main.cpp
examples/cpp/cmake/: Dependencies.cmake
examples/cpp/nix/: sources.json  sources.nix
examples/cpp/overlay/: libosmium.nix
foo/: default.nix
nix/: default.nix  fetch.nix  files.nix  haskell-overlay.nix  overlay.nix  packages.nix  sorri  sources.json  sources.lib.nix  sources.nix  termtosvg.nix  versions.json
script/: fmt  gen  test  test-sources  update  upload
site/: index.html
src/Data/Aeson/: Extended.hs
src/Data/HashMap/Strict/: Extended.hs
src/Data/Text/: Extended.hs
src/Niv/: Cli.hs  Cmd.hs  GitHub.hs  Logger.hs  Sources.hs  Test.hs  Update.hs
src/Niv/Custom/: Cmd.hs  Test.hs
src/Niv/Git/: Cmd.hs  Test.hs
src/Niv/GitHub/: API.hs  Cmd.hs  Test.hs
src/Niv/Local/: Cmd.hs
src/Niv/Sources/: Test.hs
src/Niv/Update/: Test.hs
tests/: default.nix
tests/data/repos/NixOS/nixpkgs-channels/: commits.json  repository.json
tests/data/repos/nmattia/niv/: commits.json  repository.json
tests/eval/: default.nix
tests/expected/: niv-init.json
tests/git/: default.nix
tests/github/: default.nix
tests/github/expected/: niv-init.json
